removed dummy data and added dynamic projection component

--- a/index.html
+++ b/index.html
@@ -54,10 +54,6 @@
 		</main>
 	</div>
 
-	<!-- Render Movies -->
-	<script src="./data/moviesDB.js"></script>
-	<script src="./data/ticketsDB.js"></script>
-
 	<!-- Render Component Files  -->
 	<script src="./components/About.js"></script>
 	<script src="./components/Movies.js"></script>
@@ -66,6 +62,7 @@
 	<script src="./components/Tickets.js"></script>
 	<script src="./components/Seats.js"></script>
 	<script src="./components/Complete.js"></script>
+	<script src="./components/Projection.js"></script>
 
 	<!-- Render Custom Javascript Files -->
 	<script src="./js/localStorage.js"></script>
