--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 		</main>
 	</div>
 
+	<!-- Render Movies -->
+	<script src="./data/moviesDB.js"></script>
+	<script src="./data/ticketsDB.js"></script>
+
 	<!-- Render Component Files  -->
 	<script src="./components/About.js"></script>
 	<script src="./components/Movies.js"></script>
@@ -65,7 +69,7 @@
 	<script src="./components/Projection.js"></script>
 
 	<!-- Render Custom Javascript Files -->
-	<script src="./js/localStorage.js"></script>
+	<script src="./js/storage.js"></script>
 	<script src="./js/router.js"></script>
 	<script src="./js/magic.js"></script>
 	<script src="./js/app.js"></script>
