--- a/index.html
+++ b/index.html
@@ -26,28 +26,8 @@
 
 <body>
 	<div id="app" v-cloak>
-		<header>
-			<nav>
-				<router-link to="/">Начало</router-link>
-				<router-link to="/about">За нас</router-link>
-
-				<router-link to="/" class="logo">
-					<img src="https://media.istockphoto.com/vectors/cinema-night-neon-sign-vector-id1169104240?k=20&m=1169104240&s=170667a&w=0&h=TC_df4V_wSyaKasVYXsIjoHXklQdxAGALZ-l364Udlw="
-						alt="Site Logo" />
-				</router-link>
-				<router-link to="/login">
-					<div class="user">
-						<svg height="32" viewBox="0 0 32 32" width="32" xmlns="http://www.w3.org/2000/svg">
-							<title />
-							<g data-name="1" id="_1">
-								<path
-									d="M27,3V29a1,1,0,0,1-1,1H6a1,1,0,0,1-1-1V27H7v1H25V4H7V7H5V3A1,1,0,0,1,6,2H26A1,1,0,0,1,27,3ZM12.29,20.29l1.42,1.42,5-5a1,1,0,0,0,0-1.42l-5-5-1.42,1.42L15.59,15H5v2H15.59Z"
-									id="login_account_enter_door" />
-							</g>
-						</svg>
-					</div>
-				</router-link>
-			</nav>
+		<header class="routing">
+			<navigation />
 		</header>
 		<main>
 			<router-view></router-view>
@@ -59,6 +39,7 @@
 	<script src="./data/ticketsDB.js"></script>
 
 	<!-- Render Component Files  -->
+	<script src="./components/Navigation.js"></script>
 	<script src="./components/About.js"></script>
 	<script src="./components/Movies.js"></script>
 	<script src="./components/Login.js"></script>
