--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
 	<!-- Render Custom Styles -->
 	<link rel="stylesheet" href="./style/style.css" />
 	<link rel="stylesheet" href="./style/paypal-buttons.css" />
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
 
 	<!-- Render Vue3, Vue-Router and Magic Libraries via CDN -->
 	<script src="https://unpkg.com/vue@3"></script>
 	<script src="https://unpkg.com/vue-router@4"></script>
 	<script src="https://auth.magic.link/sdk"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 
 <body>
